finish canje order

--- a/front/src/app/components/modal-status/modal-status.component.html
+++ b/front/src/app/components/modal-status/modal-status.component.html
@@ -15,7 +15,7 @@
         class="w-full h-full object-contain"
       />
     </figure>
-    <p>{{ message }}</p>
+    <p class="text-center">{{ message }}</p>
     <button
       *ngIf="status === 'failed'"
       (click)="closeModal()"
