--- a/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.html
+++ b/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.html
@@ -42,6 +42,7 @@
           </p>
         </div>
         <button
+          [disabled]="typeUser === 'org'"
           (click)="addToCart(product)"
           class="bg-darkSlateBlue px-2 py-1 rounded text-white border-2 border-darkSlateBlue"
         >
