apply button on each volunteer page

--- a/front/src/app/pages/volunter-id/volunter-id.component.css
+++ b/front/src/app/pages/volunter-id/volunter-id.component.css
@@ -28,7 +28,8 @@
 }
 
 .description {
-  width: 75%;
+  width: auto;
+  max-width: 75%;
   word-wrap: break-word;
   min-height: 24px;
   text-align: left;
