--- a/front/src/app/pages/organization-details/organization-details.component.html
+++ b/front/src/app/pages/organization-details/organization-details.component.html
@@ -141,13 +141,19 @@
               <td class="px-6 py-4 whitespace-no-wrap">
                 {{ item.description }}
               </td>
-              <td class="px-6 py-4 whitespace-no-wrap">{{ item.category }}</td>
+              <td class="px-6 py-4 whitespace-no-wrap">
+                {{ item.category }}
+              </td>
               <td class="px-6 py-4 whitespace-no-wrap">{{ item.address }}</td>
               <td class="px-6 py-4 whitespace-no-wrap">
                 {{ item.modeOfwork }}
               </td>
-              <td class="px-6 py-4 whitespace-no-wrap">{{ item.workTime }}</td>
-              <td class="px-6 py-4 whitespace-no-wrap">{{ item.vacancies }}</td>
+              <td class="px-6 py-4 whitespace-no-wrap">
+                {{ item.workTime }}
+              </td>
+              <td class="px-6 py-4 whitespace-no-wrap">
+                {{ item.vacancies }}
+              </td>
               <td
                 class="px-6 py-4 whitespace-no-wrap flex items-center justify-center"
               >
@@ -161,6 +167,7 @@
             </tr>
           </tbody>
         </table>
+
         <p
           class=""
           *ngIf="volunteerings.length === 0"
