--- a/front/src/app/pages/organization-details/organization-details.component.html
+++ b/front/src/app/pages/organization-details/organization-details.component.html
@@ -1,32 +1,15 @@
-<section class="w-full flex flex-col gap-4 mb-12">
+<section class="mt-[115px] w-full flex flex-col gap-4 mb-12 lg:mt-0">
   <header class="w-full relative">
-    <!-- <figure
-      class="w-full h-[250px] flex flex-col items-center justify-start gap-2 sm:h-[350px]" -->
-
-    <!-- <img
-        *ngIf="!organization[0]?.coverPage"
-        src="/assets/logo/logohand.svg"
-        alt="logo voluntime"
-        class="w-[100px] h-[100px] object-cover imageUpload"
-      />
-      <img
-        *ngIf="organization[0]?.coverPage"
-        [src]="organization[0]?.coverPage.imageUrl"
-        alt="Subir imagen"
-        class="w-full h-full object-cover"
-      /> -->
-
-    <!-- </figure> -->
     <div class="header-org"></div>
     <article
-      class="absolute flex justify-between items-end w-full h-full left-0 right-0 bottom-0 px-10 pb-6"
+      class="h-[500px] absolute flex justify-between items-end w-full left-0 right-0 bottom-0 px-10 pb-6"
     >
       <div class="flex flex-col justify-end">
         <h2 class="text-4xl text-white font-extrabold Tsha md:text-5xl">
-          {{ organization[0]?.name }}
+          {{ organization.name }}
         </h2>
         <a routerLink="#" class="text-white text-sm Tsha md:text-lg">{{
-          organization[0]?.email
+          organization.email
         }}</a>
       </div>
 
@@ -34,8 +17,8 @@
 
       <div class=" ">
         <img
-          *ngIf="organization[0]?.image && organization[0]?.image.imageUrl"
-          [src]="organization[0]?.image.imageUrl"
+          *ngIf="organization?.image && organization.image.imageUrl"
+          [src]="organization.image?.imageUrl"
           alt="Logo voluntime"
           class="w-[100px] h-[100px] object-cover imageUpload"
           class="w-[215px] h-[100px] mr-8"
@@ -47,10 +30,10 @@
     <ul class="flex flex-col gap-16 sm:w-[80%]">
       <li class="mt-10">
         <span class="text-2xl font-bold md:text-3xl">
-          Voluntariado en {{ organization[0]?.name }}
+          Voluntariado en {{ organization.name }}
         </span>
         <p class="sm:text-lg md:text-xl mt-6">
-          {{ organization[0]?.description }}
+          {{ organization.description }}
         </p>
       </li>
       <li>
@@ -58,7 +41,7 @@
           Tipos de Voluntariados
         </span>
         <p class="sm:text-lg md:text-xl mt-6">
-          {{ organization[0]?.category }}
+          {{ organization.category }}
         </p>
       </li>
       <li>
