--- a/front/src/app/modules/home/components/slider-organizations/slider-organizations.component.html
+++ b/front/src/app/modules/home/components/slider-organizations/slider-organizations.component.html
@@ -20,7 +20,7 @@
   >
     <ng-container *ngIf="organizations.length === 0">
       <ng-container *ngFor="let image of images">
-        <swiper-slide class="flex items-center justify-center mx-4 lg:mx-0">
+        <swiper-slide class="flex items-center justify-center mx-20 lg:mx-0">
           <figure class="w-[150px] h-[105px] md:w-[250px]">
             <img [src]="image" class="w-full h-full object-contain" />
           </figure>
@@ -31,7 +31,7 @@
     <ng-container *ngIf="organizations.length > 0">
       <ng-container *ngFor="let item of organizations">
         <swiper-slide
-          class="w-[250px] flex items-center justify-center mx-4 lg:mx-0 lg:w-[420px]"
+          class="flex items-center justify-center mx-20 lg:mx-0"
           (click)="navigateToOrganization(item.id)"
         >
           <figure class="w-[150px] h-[105px] md:w-[250px] z-10 cursor-pointer">
