--- a/front/src/app/modules/home/components/slider-organizations/slider-organizations.component.html
+++ b/front/src/app/modules/home/components/slider-organizations/slider-organizations.component.html
@@ -31,7 +31,7 @@
     <ng-container *ngIf="organizations.length > 0">
       <ng-container *ngFor="let item of organizations">
         <swiper-slide
-          class="flex items-center justify-center mx-20 lg:mx-0 lg:w-[369px]"
+          class="flex items-center justify-center mx-20 lg:mx-0 lg:w-[500px]" style="width: 369px;"
           (click)="navigateToOrganization(item.id)"
         >
           <figure class="w-[150px] h-[105px] md:w-[250px] z-10 cursor-pointer">
